changing backend model to instance